Add stats test for all caps text types

--- a/all_caps_stats.ipynb
+++ b/all_caps_stats.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ce29cd8b",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "3e17ab2c",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "ed2c2ea4",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "6b1c4f23",
    "metadata": {},
    "outputs": [
@@ -155,7 +155,7 @@
        "4                          0.013587  2009  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "eb35b947",
    "metadata": {},
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "id": "8c897442",
    "metadata": {},
    "outputs": [],
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "aaf72da1",
    "metadata": {},
    "outputs": [
@@ -375,7 +375,7 @@
        "KruskalResult(statistic=61.87850440003496, pvalue=1.1955585358356085e-07)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,9 +393,116 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ac07f7d6",
+   "metadata": {},
+   "source": [
+    "Repeat for specific text types"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "51353857",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KruskalResult(statistic=48.99920656465037, pvalue=1.7525332578570646e-05)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "years_dfs = list(get_years_dfs(\n",
+    "    misinfotext_path=\"./data/MisInfoText/Analysis_output/news_and_blog/MisInfoText_news_and_blog_all_caps.xlsx\",\n",
+    "    fakespeak_path=\"./data/Fakespeak-ENG/Analysis_output/news_and_blog/Fakespeak_news_and_blog_all_caps.xlsx\",\n",
+    "))\n",
+    "kruskal(*[df[\"proportion_upper_to_alpha_tokens\"] for df in years_dfs])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9c169f81",
+   "metadata": {},
+   "source": [
+    "There is a statistically significant difference in all-caps proportions between the years for news and blog"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "105e2a39",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KruskalResult(statistic=13.584180375499589, pvalue=0.5572703858842993)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "years_dfs = list(get_years_dfs(\n",
+    "    misinfotext_path=\"./data/MisInfoText/Analysis_output/press_release/MisInfoText_press_release_all_caps.xlsx\",\n",
+    "    fakespeak_path=\"./data/Fakespeak-ENG/Analysis_output/press_release/Fakespeak_press_release_all_caps.xlsx\",\n",
+    "))\n",
+    "kruskal(*[df[\"proportion_upper_to_alpha_tokens\"] for df in years_dfs])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b746bc1",
+   "metadata": {},
+   "source": [
+    "There is no significant difference in all-caps proportions between the years for press release"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "028a7ddc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KruskalResult(statistic=14.765019540824804, pvalue=0.32225093148201184)"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "years_dfs = list(get_years_dfs(\n",
+    "    misinfotext_path=\"./data/MisInfoText/Analysis_output/social_media/MisInfoText_social_media_all_caps.xlsx\",\n",
+    "    fakespeak_path=\"./data/Fakespeak-ENG/Analysis_output/social_media/Fakespeak_social_media_all_caps.xlsx\",\n",
+    "))\n",
+    "kruskal(*[df[\"proportion_upper_to_alpha_tokens\"] for df in years_dfs])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e2f8b975",
+   "metadata": {},
+   "source": [
+    "There is no significant difference in all-caps proportions between the years for social media"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "51353857",
+   "id": "9495a48e",
    "metadata": {},
    "outputs": [],
    "source": []
