Add stats test for lexical diversity text types

--- a/all_caps_stats.ipynb
+++ b/all_caps_stats.ipynb
@@ -397,7 +397,7 @@
    "id": "ac07f7d6",
    "metadata": {},
    "source": [
-    "Repeat for specific text types"
+    "Now repeat for specific text types"
    ]
   },
   {
