--- a/lexical_density_stats.ipynb
+++ b/lexical_density_stats.ipynb
@@ -367,6 +367,113 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "28efc025",
+   "metadata": {},
+   "source": [
+    "Now repeat for specific text types"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "45ff78ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KruskalResult(statistic=30.797479177648064, pvalue=0.009349434511875452)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "years_dfs = list(get_years_dfs(\n",
+    "    misinfotext_path=\"./data/MisInfoText/Analysis_output/news_and_blog/MisInfoText_news_and_blog_lexical_density.xlsx\",\n",
+    "    fakespeak_path=\"./data/Fakespeak-ENG/Analysis_output/news_and_blog/Fakespeak_news_and_blog_lexical_density.xlsx\",\n",
+    "))\n",
+    "kruskal(*[df[\"lexical_density\"] for df in years_dfs])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3523552b",
+   "metadata": {},
+   "source": [
+    "There is a statistically significant difference in lexical_density between the years for news and blog"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "558ac08a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KruskalResult(statistic=13.369140299858152, pvalue=0.5738089258069632)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "years_dfs = list(get_years_dfs(\n",
+    "    misinfotext_path=\"./data/MisInfoText/Analysis_output/press_release/MisInfoText_press_release_lexical_density.xlsx\",\n",
+    "    fakespeak_path=\"./data/Fakespeak-ENG/Analysis_output/press_release/Fakespeak_press_release_lexical_density.xlsx\",\n",
+    "))\n",
+    "kruskal(*[df[\"lexical_density\"] for df in years_dfs])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "87ef22c7",
+   "metadata": {},
+   "source": [
+    "There is no significant difference in lexical density between the years for press release"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "8f552433",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KruskalResult(statistic=71.30514992661972, pvalue=4.6120428422337525e-10)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "years_dfs = list(get_years_dfs(\n",
+    "    misinfotext_path=\"./data/MisInfoText/Analysis_output/social_media/MisInfoText_social_media_lexical_density.xlsx\",\n",
+    "    fakespeak_path=\"./data/Fakespeak-ENG/Analysis_output/social_media/Fakespeak_social_media_lexical_density.xlsx\",\n",
+    "))\n",
+    "kruskal(*[df[\"lexical_density\"] for df in years_dfs])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c105d8c",
+   "metadata": {},
+   "source": [
+    "There is a statistically significant difference in lexical_density between the years for social media"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "852defc4",
