Add stats test for lexical diversity text types

--- a/lexical_density_stats.ipynb
+++ b/lexical_density_stats.ipynb
@@ -404,7 +404,7 @@
    "id": "3523552b",
    "metadata": {},
    "source": [
-    "There is a statistically significant difference in lexical_density between the years for news and blog"
+    "There is a statistically significant difference in lexical density between the years for news and blog"
    ]
   },
   {
@@ -470,7 +470,7 @@
    "id": "3c105d8c",
    "metadata": {},
    "source": [
-    "There is a statistically significant difference in lexical_density between the years for social media"
+    "There is a statistically significant difference in lexical density between the years for social media"
    ]
   },
   {
