--- a/lexical_diversity_stats.ipynb
+++ b/lexical_diversity_stats.ipynb
@@ -367,6 +367,113 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ed8a4301",
+   "metadata": {},
+   "source": [
+    "Now repeat for specific text types"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "0323888a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KruskalResult(statistic=55.78370271877783, pvalue=1.3180021241263786e-06)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "years_dfs = list(get_years_dfs(\n",
+    "    misinfotext_path=\"./data/MisInfoText/Analysis_output/news_and_blog/MisInfoText_news_and_blog_lexical_diversity.xlsx\",\n",
+    "    fakespeak_path=\"./data/Fakespeak-ENG/Analysis_output/news_and_blog/Fakespeak_news_and_blog_lexical_diversity.xlsx\",\n",
+    "))\n",
+    "kruskal(*[df[\"lexical_diversity\"] for df in years_dfs])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "997921d3",
+   "metadata": {},
+   "source": [
+    "There is a statistically significant difference in lexical_diversity between the years for news and blog"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "44f6a9b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KruskalResult(statistic=19.956226995711766, pvalue=0.17361831427042584)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "years_dfs = list(get_years_dfs(\n",
+    "    misinfotext_path=\"./data/MisInfoText/Analysis_output/press_release/MisInfoText_press_release_lexical_diversity.xlsx\",\n",
+    "    fakespeak_path=\"./data/Fakespeak-ENG/Analysis_output/press_release/Fakespeak_press_release_lexical_diversity.xlsx\",\n",
+    "))\n",
+    "kruskal(*[df[\"lexical_diversity\"] for df in years_dfs])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c1359ac6",
+   "metadata": {},
+   "source": [
+    "There is no significant difference in lexical diversity between the years for press release"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "bfc9a488",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KruskalResult(statistic=48.71065687357646, pvalue=4.953355590815945e-06)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "years_dfs = list(get_years_dfs(\n",
+    "    misinfotext_path=\"./data/MisInfoText/Analysis_output/social_media/MisInfoText_social_media_lexical_diversity.xlsx\",\n",
+    "    fakespeak_path=\"./data/Fakespeak-ENG/Analysis_output/social_media/Fakespeak_social_media_lexical_diversity.xlsx\",\n",
+    "))\n",
+    "kruskal(*[df[\"lexical_diversity\"] for df in years_dfs])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aae8b293",
+   "metadata": {},
+   "source": [
+    "There is a statistically significant difference in lexical diversity between the years for social media"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "852defc4",
