Add print total ngram count

--- a/ngrams_stats.ipynb
+++ b/ngrams_stats.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "be396e2d",
    "metadata": {},
    "outputs": [],
@@ -87,6 +87,7 @@
     "\n",
     "    print(\"There are\", num_insignificant_ngrams, \"ngrams that did not change significantly, and\", \n",
     "          num_significant_ngrams, \"ngrams that changed significantly\")\n",
+    "    print(\"Total\", len(all_ngrams), \"ngrams\")\n",
     "\n",
     "    return pd.DataFrame({\n",
     "        \"ngram_text\": all_ngrams,\n",
@@ -97,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "ec950104",
    "metadata": {},
    "outputs": [
@@ -105,7 +106,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 0 ngrams that did not change significantly, and 1217 ngrams that changed significantly\n"
+      "There are 0 ngrams that did not change significantly, and 1217 ngrams that changed significantly\n",
+      "Total 1217 ngrams\n"
      ]
     },
     {
@@ -223,7 +225,7 @@
        "[1217 rows x 3 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "7b5a395d",
    "metadata": {},
    "outputs": [
@@ -246,7 +248,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 0 ngrams that did not change significantly, and 1325 ngrams that changed significantly\n"
+      "There are 0 ngrams that did not change significantly, and 1325 ngrams that changed significantly\n",
+      "Total 1325 ngrams\n"
      ]
     },
     {
@@ -364,7 +367,7 @@
        "[1325 rows x 3 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -379,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "id": "e4f5a260",
    "metadata": {},
    "outputs": [
@@ -387,7 +390,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 137 ngrams that did not change significantly, and 1512 ngrams that changed significantly\n"
+      "There are 137 ngrams that did not change significantly, and 1512 ngrams that changed significantly\n",
+      "Total 1649 ngrams\n"
      ]
     },
     {
@@ -505,7 +509,7 @@
        "[1649 rows x 3 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -520,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "id": "c4f31160",
    "metadata": {},
    "outputs": [
@@ -528,7 +532,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 326 ngrams that did not change significantly, and 993 ngrams that changed significantly\n"
+      "There are 326 ngrams that did not change significantly, and 993 ngrams that changed significantly\n",
+      "Total 1319 ngrams\n"
      ]
     },
     {
@@ -646,7 +651,7 @@
        "[1319 rows x 3 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
