--- a/named_entity_stats.ipynb
+++ b/named_entity_stats.ipynb
@@ -105,61 +105,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "f8f062b9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "years_dfs = list(get_years_dfs( \n",
-    "    misinfotext_path=\"./data/MisInfoText/Analysis_output/MisInfoText_named_entities_frequency.xlsx\",\n",
-    "    fakespeak_path=\"./data/Fakespeak-ENG/Analysis_output/Fakespeak_named_entities_frequency.xlsx\"\n",
-    "))\n",
-    "\n",
-    "for df in years_dfs:\n",
-    "    df.sort_values(\"Entity\", inplace=True)\n",
-    "\n",
-    "all_entities = sorted(set([\n",
-    "    str(entity) \n",
-    "    for df in years_dfs\n",
-    "    for entity in df[\"Entity\"] \n",
-    "]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "38be6c95",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0        (−)-nicotine\n",
-       "1                .com\n",
-       "2                  04\n",
-       "3                   1\n",
-       "4           1,000,000\n",
-       "             ...     \n",
-       "12462          İçerde\n",
-       "12463               Α\n",
-       "12464               Ξ\n",
-       "12465               Ο\n",
-       "12466               †\n",
-       "Length: 12467, dtype: object"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test = pd.Series(all_entities)\n",
-    "test"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "id": "ec950104",
    "metadata": {},
@@ -1388,10 +1333,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "352326bb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 4 entities that did not change significantly, and 0 entities that changed significantly\n",
+      "Total 4 entities\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Entity</th>\n",
+       "      <th>statistic</th>\n",
+       "      <th>pvalue</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Evidence</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.317311</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Lunar Roving Vehicle</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.317311</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Moon Landing</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.317311</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>sodium</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>0.083265</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Entity  statistic    pvalue\n",
+       "0              Evidence        1.0  0.317311\n",
+       "1  Lunar Roving Vehicle        1.0  0.317311\n",
+       "2          Moon Landing        1.0  0.317311\n",
+       "3                sodium        3.0  0.083265"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "results_social_media_headlines = run_stats_test(\n",
     "    misinfotext_path=\"./data/MisInfoText/Analysis_output/social_media/MisInfoText_social_media_named_entities_frequency_headlines.xlsx\",\n",
