Add comments and markdown for lexical density

--- a/lexical_density.ipynb
+++ b/lexical_density.ipynb
@@ -221,8 +221,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "19e079cf",
+   "metadata": {},
+   "source": [
+    "We count lexical (\"content\") words to be proper nouns, nouns, verbs, adjectives, and adverbs.\n",
+    "\n",
+    "We then calculate lexical density by dividing the number of lexical words by total number of words. This excludes non-word tokens like punctuation."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "0d37877b",
    "metadata": {},
    "outputs": [],
@@ -510,6 +520,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "09c53d9b",
+   "metadata": {},
+   "source": [
+    "Get separate dataframes for each year"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "dfc509c4",
@@ -664,6 +682,14 @@
    "source": [
     "years, years_dfs = get_groups(dataset_df, using_dataset[\"year_col\"])\n",
     "years_dfs[0].head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8d0de8a",
+   "metadata": {},
+   "source": [
+    "Get separate dataframes for each text type"
    ]
   },
   {
@@ -824,6 +850,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "69526a7a",
+   "metadata": {},
+   "source": [
+    "Using pandas's built-in `.describe()` method for dataframes to get summary stats on lexical density for each year."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "id": "8f858107",
@@ -842,7 +876,9 @@
    "id": "d5f720cb",
    "metadata": {},
    "source": [
-    "## Writing dataframes to excel spreadsheet"
+    "## Writing dataframes to excel spreadsheet\n",
+    "\n",
+    "Save to a single Excel file with tabs for each year, and a final tab for the summary"
    ]
   },
   {
@@ -877,6 +913,14 @@
     "writer = pd.ExcelWriter(output_path, engine=\"xlsxwriter\")\n",
     "save_years(writer, years, years_dfs)\n",
     "writer.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b5b120b3",
+   "metadata": {},
+   "source": [
+    "For each text type, we separate further into dataframes per year, and save the Excel files as above"
    ]
   },
   {
