--- a/lexical_density_graphs.ipynb
+++ b/lexical_density_graphs.ipynb
@@ -13,6 +13,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fadb3109",
+   "metadata": {},
+   "source": [
+    "Get summary tabs from the generated lexical density files from both datasets, then concatenate them to get a single dataframe containing all the years"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "id": "94bd2283",
@@ -52,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "aad202f9",
    "metadata": {},
    "outputs": [
@@ -68,6 +76,7 @@
     }
    ],
    "source": [
+    "# Create a figure with 4 subplots, consisting of 4 rows and 1 column\n",
     "fig, axes = plt.subplots(\n",
     "    nrows=4, \n",
     "    ncols=1, \n",
@@ -75,6 +84,8 @@
     "    squeeze=False\n",
     ")\n",
     "\n",
+    "# Get the axes as a flat list so that they're easily accessible.\n",
+    "# These axes represent each subplot.\n",
     "axes_flat: list[Axes] = axes.flatten()\n",
     "\n",
     "fig.suptitle(\"Lexical density per year for each text type\", fontsize=16)\n",
@@ -83,6 +94,7 @@
     "def plot_data_on_ax(i: str, df: pd.DataFrame, title: str):\n",
     "    years = list(df[\"year\"])\n",
     "    \n",
+    "    # Get the current subplot at index i\n",
     "    ax = axes_flat[i]\n",
     "\n",
     "    ax.set_title(title)\n",
@@ -96,6 +108,8 @@
     "\n",
     "    ax.set_ylabel(\"lexical density\")\n",
     "\n",
+    "    # Plot years on the x axis and the mean lexical density on y axis,\n",
+    "    # with error bars representing standard deviation.\n",
     "    ax.errorbar(\n",
     "        x=years, \n",
     "        y=df[\"mean\"], \n",
@@ -103,6 +117,7 @@
     "    )\n",
     "    ax.plot(years, df[\"mean\"], marker=\"o\")\n",
     "\n",
+    "# Plot each text type on its own subplot\n",
     "plot_data_on_ax(0, full_summary_df, \"All text types\")\n",
     "plot_data_on_ax(1, news_and_blog_summary_df, \"News and blog\")\n",
     "plot_data_on_ax(2, press_release_summary_df, \"Press release\")\n",
