Add comments/markdown to lexical diversity

--- a/lexical_diversity.ipynb
+++ b/lexical_diversity.ipynb
@@ -190,6 +190,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "23180fcd",
+   "metadata": {},
+   "source": [
+    "Lexical diversity is defined as the number of types divided by number of tokens, including punctuation"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "0d37877b",
@@ -420,6 +428,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6a02563b",
+   "metadata": {},
+   "source": [
+    "Get separate dataframes for each year"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "99e51d81",
@@ -544,8 +560,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0afdbc2d",
+   "metadata": {},
+   "source": [
+    "Get separate dataframes for each text type"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "1fc8b086",
    "metadata": {},
    "outputs": [
@@ -663,8 +687,16 @@
     }
    ],
    "source": [
-    "word_types, types_dfs = get_groups(dataset_df, using_dataset[\"type_col\"])\n",
+    "types, types_dfs = get_groups(dataset_df, using_dataset[\"type_col\"])\n",
     "types_dfs[0].head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ead15a4",
+   "metadata": {},
+   "source": [
+    "Using pandas's built-in `.describe()` method for dataframes to get summary stats on lexical diversity for each year."
    ]
   },
   {
@@ -686,7 +718,9 @@
    "id": "d78d0c0a",
    "metadata": {},
    "source": [
-    "## Writing dataframes to excel spreadsheet"
+    "## Writing dataframes to excel spreadsheet\n",
+    "\n",
+    "Save to a single Excel file with tabs for each year, and a final tab for the summary"
    ]
   },
   {
@@ -724,13 +758,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e44a7e86",
+   "metadata": {},
+   "source": [
+    "For each text type, we separate further into dataframes per year, and save the Excel files as above"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "9a254e6e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for type, df in zip(word_types, types_dfs):\n",
+    "for type, df in zip(types, types_dfs):\n",
     "    years, years_dfs = get_groups(df, using_dataset[\"year_col\"])\n",
     "\n",
     "    output_path = make_output_path_for_type(using_dataset, type, \"lexical_diversity\")\n",
