--- a/lexical_diversity_graphs.ipynb
+++ b/lexical_diversity_graphs.ipynb
@@ -13,199 +13,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ec6c1342",
+   "metadata": {},
+   "source": [
+    "Get summary tabs from the generated lexical density files from both datasets, then concatenate them to get a single dataframe containing all the years"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "177f5f0d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_years_dfs(misinfotext_path: str, fakespeak_path: str):\n",
-    "    misinfotext_file = pd.ExcelFile(misinfotext_path)\n",
-    "    \n",
-    "    for year in misinfotext_file.sheet_names:\n",
-    "        if year == \"Summary\":\n",
-    "            continue\n",
-    "\n",
-    "        df = pd.read_excel(misinfotext_file, sheet_name=year)\n",
-    "        df[\"year\"] = year\n",
-    "        yield df\n",
-    "    \n",
-    "    fakespeak_file = pd.ExcelFile(fakespeak_path)\n",
-    "    \n",
-    "    for year in fakespeak_file.sheet_names:\n",
-    "        if year == \"Summary\":\n",
-    "            continue\n",
-    "\n",
-    "        df = pd.read_excel(fakespeak_file, sheet_name=year)\n",
-    "        df[\"year\"] = year\n",
-    "        yield df\n",
-    "\n",
-    "def get_full_df(misinfotext_path: str, fakespeak_path: str):\n",
-    "    return pd.concat(get_years_dfs(misinfotext_path, fakespeak_path))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "0b23cfd6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>factcheckURL</th>\n",
-       "      <th>lexical_diversity</th>\n",
-       "      <th>year</th>\n",
-       "      <th>ID</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>http://www.politifact.com/truth-o-meter/statem...</td>\n",
-       "      <td>0.530405</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>http://www.politifact.com/truth-o-meter/statem...</td>\n",
-       "      <td>0.351220</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>http://www.politifact.com/truth-o-meter/statem...</td>\n",
-       "      <td>0.513308</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>http://www.politifact.com/truth-o-meter/statem...</td>\n",
-       "      <td>0.344487</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>http://www.politifact.com/truth-o-meter/statem...</td>\n",
-       "      <td>0.424444</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>198</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.653846</td>\n",
-       "      <td>2024</td>\n",
-       "      <td>Politifact_Pants on Fire_News and blog_349630</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>199</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.950000</td>\n",
-       "      <td>2024</td>\n",
-       "      <td>Politifact_Pants on Fire_Social media_604573</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>200</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.882353</td>\n",
-       "      <td>2024</td>\n",
-       "      <td>Politifact_Pants on Fire_Social media_34369</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>201</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.777778</td>\n",
-       "      <td>2024</td>\n",
-       "      <td>Politifact_Pants on Fire_Social media_153628</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>202</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.394095</td>\n",
-       "      <td>2024</td>\n",
-       "      <td>Politifact_Pants on Fire_News and blog_493442</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>3646 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                          factcheckURL  lexical_diversity  \\\n",
-       "0    http://www.politifact.com/truth-o-meter/statem...           0.530405   \n",
-       "1    http://www.politifact.com/truth-o-meter/statem...           0.351220   \n",
-       "2    http://www.politifact.com/truth-o-meter/statem...           0.513308   \n",
-       "3    http://www.politifact.com/truth-o-meter/statem...           0.344487   \n",
-       "4    http://www.politifact.com/truth-o-meter/statem...           0.424444   \n",
-       "..                                                 ...                ...   \n",
-       "198                                                NaN           0.653846   \n",
-       "199                                                NaN           0.950000   \n",
-       "200                                                NaN           0.882353   \n",
-       "201                                                NaN           0.777778   \n",
-       "202                                                NaN           0.394095   \n",
-       "\n",
-       "     year                                             ID  \n",
-       "0    2009                                            NaN  \n",
-       "1    2009                                            NaN  \n",
-       "2    2009                                            NaN  \n",
-       "3    2009                                            NaN  \n",
-       "4    2009                                            NaN  \n",
-       "..    ...                                            ...  \n",
-       "198  2024  Politifact_Pants on Fire_News and blog_349630  \n",
-       "199  2024   Politifact_Pants on Fire_Social media_604573  \n",
-       "200  2024    Politifact_Pants on Fire_Social media_34369  \n",
-       "201  2024   Politifact_Pants on Fire_Social media_153628  \n",
-       "202  2024  Politifact_Pants on Fire_News and blog_493442  \n",
-       "\n",
-       "[3646 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "full_df = get_full_df(\n",
-    "    misinfotext_path=\"./data/MisInfoText/Analysis_output/MisInfoText_lexical_diversity.xlsx\",\n",
-    "    fakespeak_path=\"./data/Fakespeak-ENG/Analysis_output/Fakespeak_lexical_diversity.xlsx\"\n",
-    ")\n",
-    "full_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
    "id": "94bd2283",
    "metadata": {},
    "outputs": [],
@@ -218,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "8830955f",
    "metadata": {},
    "outputs": [],
@@ -243,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "aad202f9",
    "metadata": {},
    "outputs": [
@@ -259,6 +76,7 @@
     }
    ],
    "source": [
+    "# Create a figure with 4 subplots, consisting of 4 rows and 1 column\n",
     "fig, axes = plt.subplots(\n",
     "    nrows=4, \n",
     "    ncols=1, \n",
@@ -266,6 +84,8 @@
     "    squeeze=False\n",
     ")\n",
     "\n",
+    "# Get the axes as a flat list so that they're easily accessible.\n",
+    "# These axes represent each subplot.\n",
     "axes_flat: list[Axes] = axes.flatten()\n",
     "\n",
     "fig.suptitle(\"Lexical diversity per year for each text type\", fontsize=16)\n",
@@ -287,6 +107,8 @@
     "\n",
     "    ax.set_ylabel(\"lexical diversity\")\n",
     "\n",
+    "    # Plot years on the x axis and the mean lexical diversity on y axis,\n",
+    "    # with error bars representing standard deviation.\n",
     "    ax.errorbar(\n",
     "        x=years, \n",
     "        y=df[\"mean\"], \n",
@@ -294,6 +116,7 @@
     "    )\n",
     "    ax.plot(years, df[\"mean\"], marker=\"o\")\n",
     "\n",
+    "# Plot each text type on its own subplot\n",
     "plot_data_on_ax(0, full_summary_df, \"All text types\")\n",
     "plot_data_on_ax(1, news_and_blog_summary_df, \"News and blog\")\n",
     "plot_data_on_ax(2, press_release_summary_df, \"Press release\")\n",
