--- a/lexical_diversity_stats.ipynb
+++ b/lexical_diversity_stats.ipynb
@@ -13,30 +13,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "0fa9c701",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Create a generator that will yield each year dataframe in order\n",
     "def get_years_dfs(misinfotext_path: str, fakespeak_path: str):\n",
     "    misinfotext_file = pd.ExcelFile(misinfotext_path)\n",
     "    \n",
     "    for sheet in misinfotext_file.sheet_names:\n",
+    "        # Skip the summary tab, only care about raw data\n",
     "        if sheet == \"Summary\":\n",
     "            continue\n",
     "        \n",
     "        df = pd.read_excel(misinfotext_file, sheet_name=sheet)\n",
+    "\n",
+    "        # Add a column for year \n",
     "        df[\"year\"] = sheet\n",
+    "\n",
     "        yield df\n",
     "    \n",
     "    fakespeak_file = pd.ExcelFile(fakespeak_path)\n",
     "    \n",
     "    for sheet in fakespeak_file.sheet_names:\n",
+    "        # Skip the summary tab, only care about raw data\n",
     "        if sheet == \"Summary\":\n",
     "            continue\n",
     "        \n",
     "        df = pd.read_excel(fakespeak_file, sheet_name=sheet)\n",
+    "        \n",
+    "        # Add a column for year \n",
     "        df[\"year\"] = sheet\n",
+    "        \n",
     "        yield df"
    ]
   },
